--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -48,14 +48,14 @@ template {
 
 a {
     text-decoration: none;
-    color: #C90016;
+    color: #6EA9D3;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
 }
 
 a:active,
 a:hover {
-    color: #A30012;
+    color: #2A5687;
     outline-width: 0;
 }
 
